sqlite3/lib/src/ffi/generated/native.dart


@ffi.Native<
    ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Pointer<ffi.Void>>)>()
external int sqlite3changeset_invert(
  int nIn,
  ffi.Pointer<ffi.Void> pIn,
  ffi.Pointer<ffi.Int> pnOut,
  ffi.Pointer<ffi.Pointer<ffi.Void>> ppOut,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<imp$1.sqlite3_session>, ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Pointer<ffi.Void>>)>()
external int sqlite3session_patchset(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
  ffi.Pointer<ffi.Int> pnPatchset,
  ffi.Pointer<ffi.Pointer<ffi.Void>> ppPatchset,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<imp$1.sqlite3_session>, ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Pointer<ffi.Void>>)>()
external int sqlite3session_changeset(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
  ffi.Pointer<ffi.Int> pnChangeset,
  ffi.Pointer<ffi.Pointer<ffi.Void>> ppChangeset,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_session>)>()
external int sqlite3session_isempty(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3_session>, ffi.Pointer<imp$1.sqlite3_char>)>()
external int sqlite3session_attach(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
  ffi.Pointer<imp$1.sqlite3_char> zTab,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3_session>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Pointer<ffi.Pointer<imp$1.sqlite3_char>>)>()
external int sqlite3session_diff(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
  ffi.Pointer<imp$1.sqlite3_char> zFromDb,
  ffi.Pointer<imp$1.sqlite3_char> zTbl,
  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_char>> pzErrMsg,
);

const addresses = _SymbolAddresses();

final class _SymbolAddresses implements imp$1.SharedSymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      get sqlite3_free => ffi.Native.addressOf(self.sqlite3_free);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_session>)>>
      get sqlite3session_delete =>
          ffi.Native.addressOf(self.sqlite3session_delete);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<imp$1.sqlite3_changeset_iter>)>>
      get sqlite3changeset_finalize =>
          ffi.Native.addressOf(self.sqlite3changeset_finalize);
}
